# nimo-agent

./: .gitignore  .tapd.json  CLAUDE.md  LICENSE  README.md  _gbk_scan.txt  _gbk_scan2.txt  config.example.yaml  nimo_acp.bat  pyproject.toml  requirements.txt
docs/: _tama_preview.html  aionui-acp-setup.md  architecture.md  audit-2026-06-25.md
docs/superpowers/plans/: 2026-06-10-nimo-agent.md  2026-06-10-welcome-screen-implementation.md  2026-06-15-acp-protocol-implementation.md  2026-06-17-scheduled-task-redesign-plan.md  2026-06-17-scheduled-task-system-plan.md  2026-06-18-execution-engine-plan.md  2026-06-23-skill-system-plan.md  2026-06-25-svn-remote-url-plan.md  2026-06-30-profile-refactor.md
docs/superpowers/specs/: 2026-06-10-nimo-agent-design.md  2026-06-10-welcome-screen-design.md  2026-06-23-skill-system-design.md  (+6 more)
nimo/: acp_server.py  agent.py  config.py  display.py  engine.py  main.py  welcome.py
nimo/llm/: client.py
nimo/memory/: history.py  profile.py
nimo/prompts/: system.md
nimo/skill/: __init__.py  installer.py  registry.py
nimo/tools/: __init__.py  profile.py  python_exec.py  registry.py  schedule.py  skill_tools.py  svn_intent.py  tapd.py  tapd_intent.py  tortoisesvn.py
tests/: test_acp_server.py  test_agent.py  test_config.py  test_display.py  test_engine.py  test_history.py  test_integration.py  test_llm_client.py  test_main.py  test_profile.py  test_profile_tool.py  test_python_exec.py  test_registry.py  test_schedule.py  test_skill.py  test_svn_intent.py  test_tapd_intent.py  test_tapd_tools.py  test_tortoisesvn.py  test_welcome.py
(+10 files in other folders)
