[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nimo"
version = "1.0.0"
description = "CLI AI Agent based on DeepSeek function calling for TAPD operations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Nimo Team" },
]
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["nimo*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
